ft_containers-unit-test/logs.txt
../vector_tests/assign(std iterators).cpp:27:9: error: no matching member function for call to 'assign'
        vector.assign(tmp.begin(), tmp.end());
        ~~~~~~~^~~~~~
../vector_tests/assign(std iterators).cpp:38:75: note: in instantiation of function template specialization 'assign_std_test<int>' requested here
        exit(run_vector_unit_test<int>("assign(std iterators)", assign_std_test, assign_std_test));
                                                                                 ^
../vector_tests/../../../vector.hpp:168:6: note: candidate function [with InputIterator = __gnu_cxx::__normal_iterator<int *, std::vector<int>>] not viable: no known conversion from 'std::vector<int>::iterator' (aka '__normal_iterator<int *, std::vector<int, std::allocator<int>>>') to 'typename ft::enable_if<!ft::is_integral<__normal_iterator<int *, vector<int>>>::value, int>::argument_type *' (aka 'int *') for 1st argument
void assign (typename ft::enable_if<!ft::is_integral<InputIterator>::value, T >::argument_type *   first, InputIterator last) //candidate template ignored: substitution failure [with _InputIter = int]
     ^
../vector_tests/../../../vector.hpp:206:6: note: candidate function not viable: no known conversion from 'std::vector<int>::iterator' (aka '__normal_iterator<int *, std::vector<int, std::allocator<int>>>') to 'ft::vector::size_type' (aka 'unsigned long') for 1st argument
void assign (size_type n, const value_type& val) //
     ^
1 error generated.
iter(0) , end_iter(0)
                 ^
../vector_tests/../../../vector.hpp:91:2: note: candidate constructor not viable: requires single argument 'rhs', but 2 arguments were provided
        vector (vector const &rhs)
        ^
1 error generated.
